# subgraph-enumeration

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: config.h
dataset/: ca-netscience.txt  wiki-vote.txt
dataset/6vertex/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
dataset/7vertex/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+37 more)
dataset/huge_query/: p4.txt  p5.txt
dataset/light_query/: p4.txt  p5.txt
executable/: CMakeLists.txt  diamond.cpp  four_square.cpp  house.cpp  near_five_clique.cpp  quad_triangle.cpp  triple_triangle.cpp  txt2bin.cpp
matching/: CMakeLists.txt  join.cpp  join.h  parallel.cpp  parallel.h
plan/: CMakeLists.txt  all_td.cpp  all_td.h  decomposition.cpp  decomposition.h  estimator.cpp  estimator.h  optimizer.cpp  optimizer.h  subset_structure.cpp  subset_structure.h
relation/: CMakeLists.txt  candidate_space.cpp  candidate_space.h  graph.cpp  graph.h  labeled_graph.cpp  labeled_graph.h  relation.cpp  relation.h
utility/: CMakeLists.txt  clique.cpp  clique.h  command.cpp  command.h  command_parser.cpp  command_parser.h  compute_set_intersection.cpp  compute_set_intersection.h  utils.cpp  utils.h
utility/automorphism/: NRswitchg  addedgeg  addptg  amtog  assembleg  biplabg  catg  complg  config.status  converseg  copyg  countg  cubhamg  deledgeg  delptg  directg  dreadnaut  dretodot  dretog  edgetransg  genbg  genbgL  geng  gengL  genquarticg  genrang  genspecialg  gentourng  gentreeg  hamheuristic  labelg  linegraphg  listg  makefile  multig  nbrhoodg  newedgeg  pickg  planarg  ranlabg  (+7 more)
utility/td/: CMakeLists.txt  SCsolver.cpp  SCsolver.h  bitmapset.c  bitmapset.h  dataloader.cpp  global_setting.h  hypergraph.cpp  hypergraph.h  idv.txt  preprocessing.cpp  preprocessing.h  preprocessing.hpp  sample.c  td.cpp  td.h  td_utils.hpp  twbound.cpp  twbound.h  utils.cpp
utility/td/glpk-4.55/: Makefile  config.status  libtool
utility/td/glpk-4.55/doc/: graphs.tex
utility/td/glpk-4.55/examples/: Makefile  glpsol
utility/td/glpk-4.55/examples/.deps/: glpsol.Po
utility/td/glpk-4.55/examples/.libs/: glpsol
utility/td/glpk-4.55/src/: Makefile  libglpk.la
utility/td/glpk-4.55/src/.deps/: libglpk_la-adler32.Plo  libglpk_la-alloc.Plo  libglpk_la-amd_1.Plo  libglpk_la-amd_2.Plo  libglpk_la-amd_aat.Plo  libglpk_la-amd_control.Plo  libglpk_la-amd_defaults.Plo  libglpk_la-amd_dump.Plo  libglpk_la-amd_info.Plo  libglpk_la-amd_order.Plo  libglpk_la-amd_post_tree.Plo  libglpk_la-amd_postorder.Plo  libglpk_la-amd_preprocess.Plo  libglpk_la-amd_valid.Plo  libglpk_la-avl.Plo  libglpk_la-bfd.Plo  libglpk_la-bfx.Plo  libglpk_la-bignum.Plo  libglpk_la-btf.Plo  libglpk_la-btfint.Plo  libglpk_la-cfg.Plo  libglpk_la-cfg1.Plo  libglpk_la-colamd.Plo  libglpk_la-crc32.Plo  libglpk_la-deflate.Plo  libglpk_la-dlsup.Plo  libglpk_la-dmp.Plo  libglpk_la-env.Plo  libglpk_la-error.Plo  libglpk_la-ffalg.Plo  libglpk_la-fhv.Plo  libglpk_la-fhvint.Plo  libglpk_la-fp2rat.Plo  libglpk_la-gcd.Plo  libglpk_la-glpapi01.Plo  libglpk_la-glpapi02.Plo  libglpk_la-glpapi03.Plo  libglpk_la-glpapi04.Plo  libglpk_la-glpapi05.Plo  libglpk_la-glpapi06.Plo  (+98 more)
utility/td/glpk-4.55/src/.libs/: libglpk-symbols.expsym
utility/td/glpk-4.55/src/.libs/libglpk.36.dylib.dSYM/Contents/Resources/DWARF/: libglpk.36.dylib
utility/td/glpk_lib/lib/: libglpk.36.dylib  libglpk.la
